[gd_scene load_steps=17 format=3 uid="uid://dih1yhtc3i2pi"]

[ext_resource type="Texture2D" uid="uid://bkx4885tx5m5n" path="res://assets/sprites/bg_v1.png" id="1_oollh"]
[ext_resource type="Script" path="res://scripts/stage.gd" id="1_rf8uv"]
[ext_resource type="Texture2D" uid="uid://rqer3ckofepk" path="res://assets/sprites/bg_v2.png" id="2_o0ham"]
[ext_resource type="PackedScene" uid="uid://cqjpbto1jqno8" path="res://scenes/units/player.tscn" id="3_xg2wh"]
[ext_resource type="PackedScene" uid="uid://dy1at8euvfuyp" path="res://scenes/environment/timebreak.tscn" id="4_qlwoy"]
[ext_resource type="PackedScene" uid="uid://c377fo1lask10" path="res://scenes/environment/wall_1.tscn" id="6_kot70"]
[ext_resource type="PackedScene" uid="uid://c2v7luoful5ey" path="res://scenes/environment/collapse_wall.tscn" id="7_h7pos"]
[ext_resource type="PackedScene" uid="uid://comtt4ermawe1" path="res://scenes/environment/checkpoint.tscn" id="7_qkc3c"]
[ext_resource type="PackedScene" uid="uid://dsla8ntrf3uql" path="res://scenes/environment/galacto_core.tscn" id="8_b103b"]
[ext_resource type="FontFile" uid="uid://cuk848i8503r0" path="res://assets/fonts/nasalization-rg.otf" id="8_cvwop"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j8738"]
texture = ExtResource("1_oollh")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_23swk"]
texture = ExtResource("2_o0ham")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_2ok45"]
tile_size = Vector2i(256, 256)
sources/0 = SubResource("TileSetAtlasSource_j8738")
sources/1 = SubResource("TileSetAtlasSource_23swk")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2kvmq"]
size = Vector2(28922.3, 78)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l1jn2"]
size = Vector2(68, 688)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42y8u"]
size = Vector2(190.135, 332.849)

[node name="Stage" type="Node2D"]
script = ExtResource("1_rf8uv")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.07, 0.07)

[node name="TileMap" type="TileMap" parent="ParallaxBackground/ParallaxLayer"]
tile_set = SubResource("TileSet_2ok45")
format = 2
layer_0/tile_data = PackedInt32Array(-1, 1, 0, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, -65521, 1, 0, 15, 1, 0, 65551, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 1, 0, 131099, 1, 0, 131100, 1, 0, 131101, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 1, 0, 65563, 1, 0, 65564, 1, 0, 65565, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 1, 0, -65515, 1, 0, -65514, 1, 0, -65513, 1, 0, -65512, 1, 0, -65511, 1, 0, 196605, 1, 0, 131069, 1, 0, 65533, 1, 0, -3, 1, 0, -2, 1, 0, 65534, 1, 0, 131070, 1, 0, 196606, 1, 0, 196604, 1, 0, 131068, 1, 0, 65532, 1, 0, -4, 1, 0, -5, 1, 0)

[node name="Player" parent="." instance=ExtResource("3_xg2wh")]
position = Vector2(597, 331)

[node name="Walls" type="Node2D" parent="."]
scale = Vector2(1.2, 1)

[node name="Wall1" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(896.667, 105)
scale = Vector2(0.833333, 1)

[node name="Wall2" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(1653.33, 492)
scale = Vector2(0.833333, 1)

[node name="Wall3" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(2454.17, 94)
scale = Vector2(0.833333, 1)

[node name="Wall4" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(2454.17, 700)
scale = Vector2(0.833333, 1)

[node name="Wall6" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(4412.5, 167)
scale = Vector2(2, 2)

[node name="Wall9" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(3975, 417)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall8" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(3536.67, 167)
scale = Vector2(2, 2)

[node name="TimebreakWall" parent="Walls" instance=ExtResource("7_h7pos")]
position = Vector2(4898.33, 183)
scale = Vector2(1.66667, 1.5)

[node name="TimebreakWall2" parent="Walls" instance=ExtResource("7_h7pos")]
position = Vector2(5741.67, 191)
scale = Vector2(1.66667, 1.5)

[node name="TimebreakWall4" parent="Walls" instance=ExtResource("7_h7pos")]
position = Vector2(10850.8, 588)
rotation = 1.5708
scale = Vector2(2.5, 2)

[node name="TimebreakWall7" parent="Walls" instance=ExtResource("7_h7pos")]
position = Vector2(11523.3, 487)
rotation = 1.5708
scale = Vector2(2.5, 2)

[node name="TimebreakWall5" parent="Walls" instance=ExtResource("7_h7pos")]
position = Vector2(10841.7, -149)
rotation = 1.5708
scale = Vector2(2.5, 2)

[node name="TimebreakWall6" parent="Walls" instance=ExtResource("7_h7pos")]
position = Vector2(10176.7, 588)
rotation = 1.5708
scale = Vector2(2.5, 2)

[node name="TimebreakWall9" parent="Walls" instance=ExtResource("7_h7pos")]
position = Vector2(10167.5, -149)
rotation = 1.5708
scale = Vector2(2.5, 2)

[node name="TimebreakWall8" parent="Walls" instance=ExtResource("7_h7pos")]
position = Vector2(11523.3, -86)
rotation = 1.5708
scale = Vector2(2.5, 2)

[node name="Wall7" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(5252.5, 139)
scale = Vector2(0.833333, 1)

[node name="Wall11" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(7094.17, 182)
scale = Vector2(2, 2)

[node name="Wall12" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(7405.83, 476)
scale = Vector2(2, 2)

[node name="Wall14" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(8053.33, 499)
scale = Vector2(2, 2)

[node name="Wall19" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(12010, 601)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall20" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(12010, 45)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall21" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(12710.8, 598)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall22" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(12710.8, 42)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall25" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(13417.5, 517.167)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall26" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(13417.5, 106.167)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall27" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(14118.3, 517)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall28" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(14118.3, 106)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall29" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(14816.7, 514)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall30" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(14816.7, 103)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall31" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(16704.2, 319)
scale = Vector2(2, 2)

[node name="Wall32" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(16254.3, 700)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall33" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(16254.3, -59)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall34" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(15550, 1)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall35" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(15550, 640.167)
rotation = 1.5708
scale = Vector2(2, 2)

[node name="Wall15" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(8333.33, 203)
rotation = 1.5708

[node name="Wall16" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(8592.5, 443)
rotation = 1.5708

[node name="Wall17" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(8660, 146)
scale = Vector2(1.3, 1.3)

[node name="Wall13" parent="Walls" instance=ExtResource("6_kot70")]
position = Vector2(7730.83, 142)
scale = Vector2(2, 2)

[node name="Checkpoints" type="Node2D" parent="."]

[node name="Checkpoint" parent="Checkpoints" instance=ExtResource("7_qkc3c")]
position = Vector2(597, 331)

[node name="Checkpoint2" parent="Checkpoints" instance=ExtResource("7_qkc3c")]
position = Vector2(3558, 343)
checkpoint_id = 1

[node name="Checkpoint3" parent="Checkpoints" instance=ExtResource("7_qkc3c")]
position = Vector2(7634, 343)
checkpoint_id = 2

[node name="Checkpoint4" parent="Checkpoints" instance=ExtResource("7_qkc3c")]
position = Vector2(10963, 344)
checkpoint_id = 3

[node name="WorldBorders" type="Node2D" parent="."]

[node name="Top" type="StaticBody2D" parent="WorldBorders"]
position = Vector2(3259, 1)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBorders/Top"]
position = Vector2(6379.88, -39)
shape = SubResource("RectangleShape2D_2kvmq")

[node name="Bottom" type="StaticBody2D" parent="WorldBorders"]
position = Vector2(158, 723)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBorders/Bottom"]
position = Vector2(9493.75, -39)
shape = SubResource("RectangleShape2D_2kvmq")

[node name="Left" type="StaticBody2D" parent="WorldBorders"]
position = Vector2(-26, 324)

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBorders/Left"]
shape = SubResource("RectangleShape2D_l1jn2")

[node name="Area2D" type="Area2D" parent="." groups=["timebreak_start"]]
position = Vector2(2084, 161)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_42y8u")

[node name="GalactoCore" parent="." instance=ExtResource("8_b103b")]
position = Vector2(19599, 329)

[node name="Timebreak" parent="." instance=ExtResource("4_qlwoy")]
position = Vector2(-1309, -77)

[node name="GameOverText" type="RichTextLabel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = -444.0
offset_top = -153.0
offset_right = -148.0
offset_bottom = -15.0
scale = Vector2(2, 2)
pivot_offset = Vector2(148, 51)
theme_override_fonts/normal_font = ExtResource("8_cvwop")
text = "You've fallen through a crack in time. Looks like you get a second chance.

This time..."
scroll_active = false

[node name="GameOverText2" type="RichTextLabel" parent="GameOverText"]
self_modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_right = 296.0
offset_bottom = 140.0
pivot_offset = Vector2(148, 51)
theme_override_fonts/normal_font = ExtResource("8_cvwop")
text = "You've fallen through a crack in time. Looks like you get a second chance.

This time..."
scroll_active = false

[node name="WinnerText" type="RichTextLabel" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0, 0, 0, 1)
offset_left = -444.0
offset_top = -153.0
offset_right = -148.0
offset_bottom = 4.0
scale = Vector2(2, 2)
pivot_offset = Vector2(148, 51)
theme_override_fonts/normal_font = ExtResource("8_cvwop")
text = "The universe is saved!

Nice one!"
scroll_active = false

[node name="WinnerText2" type="RichTextLabel" parent="WinnerText"]
layout_mode = 0
offset_right = 296.0
offset_bottom = 161.0
pivot_offset = Vector2(148, 51)
theme_override_fonts/normal_font = ExtResource("8_cvwop")
text = "The universe is saved!

Nice one!"
scroll_active = false
